--- a/wf-stats-ui/src/pages/SearchPage.css
+++ b/wf-stats-ui/src/pages/SearchPage.css
@@ -2,7 +2,7 @@
     background: #00ccff;
 }
 
-h1 {
+.main-title {
     display: flex;
     justify-content: center;
     font-size: 40px;
@@ -15,10 +15,6 @@ h1 {
     justify-content: center;
     margin-bottom: 50px;
     margin-top: 50px;
-
-    .input {
-        padding: 50px;
-    }
 
     .city {
         margin-left: 20px;
