Update styles and routers.

--- a/wf-stats-ui/src/App.css
+++ b/wf-stats-ui/src/App.css
@@ -1,4 +1,8 @@
 .App {
+    background-color: #f6f6f6;
+    height: 100%;
+    margin: 0;
+
     .cell-header {
         font-size: 20px;
         font-family: -apple-system, serif;
@@ -17,5 +21,6 @@
     .statistic-page {
         margin-top: 25px;
         text-align: center;
+        padding-bottom: 540px;
     }
 }
