--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -22,27 +22,30 @@
     }
 
     .search-button {
-        margin-left: 10px;
+        margin-top: 10px;
+        margin-left: 15px;
     }
 }
 
 .box {
-    display: flex;
-    justify-content: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
+    width: 500px;
     background-color: #f6f6f6;
     padding: 4px;
     border-radius: 5px;
 
-    .modal-close-button {
-        position: absolute;
+    .modal-title {
+        margin-left: 10px;
         margin-top: 10px;
+        font-family: sans-serif, serif;
+        font-size: 20px;
+    }
+
+    .modal-close-button {
         margin-right: 10px;
-        right: 0;
         float: right;
         min-width: 0;
         width: 20px;
@@ -51,7 +54,29 @@
     }
 
     .close-image {
-        margin-top: 5px;
+        margin: 0;
         height: 20px;
+    }
+
+    .weather-info {
+        margin-left: 30px;
+
+        .location {
+            font-size: 26px;
+            font-family: -apple-system, serif;
+        }
+
+        .overall-image {
+            display: inline-block;
+        }
+
+        .degrees {
+            position: absolute;
+            top: 130px;
+            display: inline-block;
+            margin-left: 80px;
+            justify-content: center;
+            font-size: 72px;
+        }
     }
 }
