--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -22,7 +22,7 @@
     }
 
     .search-button {
-        margin-top: 10px;
+        margin-top: 6px;
         margin-left: 15px;
     }
 }
@@ -58,13 +58,14 @@
         height: 20px;
     }
 
+    .location {
+        font-size: 22px;
+        font-family: -apple-system, serif;
+        font-weight: bold;
+    }
+
     .weather-info {
         margin-left: 30px;
-
-        .location {
-            font-size: 26px;
-            font-family: -apple-system, serif;
-        }
 
         .overall-image {
             display: inline-block;
