--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -79,5 +79,9 @@
             justify-content: center;
             font-size: 72px;
         }
+
+        .overall-weather {
+            margin-left: 330px;
+        }
     }
 }
