--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -1,29 +1,61 @@
-.header {
-    display: flex;
-    justify-content: center;
-}
+.App {
 
-.main-title {
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-    text-align: center;
-    padding: 10px;
-}
-
-.inputs {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
-
-    .city {
-        margin-left: 20px;
+    .change-location {
+        margin-top: 25px;
+        text-align: center;
+        font-size: 32px;
+        font-family: sans-serif;
     }
 
-    .search-button {
-        margin-top: 6px;
+    .change-button {
         margin-left: 15px;
+    }
+
+    .statistic-page {
+        margin-top: 40px;
+
+        .title-statistic {
+            text-align: center;
+            font-size: 32px;
+            font-family: sans-serif;
+        }
+
+        .statistic-diagram {
+            width: 1000px;
+            display: table;
+            margin: 30px auto;
+        }
+
+        .buttons-group {
+            display: flex;
+            flex-direction: row;
+            margin-left: 240px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+
+            .filter-statistic {
+                margin-top: 10px;
+                margin-left: 150px;
+            }
+
+            .date-statistic {
+                margin-top: 10px;
+                margin-left: 100px;
+            }
+
+            .reset-filter {
+                margin-left: 30px;
+            }
+        }
+
+        .get-statistic-country {
+            text-align: center;
+
+            .search-statistic-button {
+                margin-top: 5px;
+                margin-left: 15px;
+            }
+        }
     }
 }
 
@@ -32,57 +64,50 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
+    width: 550px;
     background-color: #f6f6f6;
     padding: 4px;
     border-radius: 5px;
 
-    .modal-title {
-        margin-left: 10px;
-        margin-top: 10px;
-        font-family: sans-serif, serif;
-        font-size: 20px;
-    }
+    .title-modal {
+        font-family: sans-serif, sans-serif;
+        margin-top: 15px;
+        text-align: center;
+        font-size: 34px;
 
-    .modal-close-button {
-        margin-right: 10px;
-        float: right;
-        min-width: 0;
-        width: 20px;
-        height: 20px;
-        line-height: 0;
-    }
-
-    .close-image {
-        margin: 0;
-        height: 20px;
-    }
-
-    .location {
-        font-size: 22px;
-        font-family: -apple-system, serif;
-        font-weight: bold;
-    }
-
-    .weather-info {
-        margin-left: 30px;
-
-        .overall-image {
-            display: inline-block;
+        .modal-close-button {
+            margin-right: 10px;
+            float: right;
+            min-width: 0;
+            width: 20px;
+            height: 20px;
+            line-height: 0;
         }
 
-        .degrees {
-            position: absolute;
-            top: 130px;
-            display: inline-block;
-            margin-left: 80px;
-            justify-content: center;
-            font-size: 72px;
+        .close-image {
+            height: 20px;
         }
+    }
 
-        .overall-weather {
-            text-align: right;
-            margin-right: 80px;
+    .inputs {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 30px;
+        margin-top: 30px;
+
+        .city {
+            margin-left: 20px;
         }
+    }
+
+    .alert-message {
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    .search-button {
+        text-align: right;
+        margin-bottom: 25px;
+        margin-right: 30px;
     }
 }
