--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -2,6 +2,7 @@
 
     .change-location {
         margin-top: 25px;
+        margin-bottom: 30px;
         text-align: center;
         font-size: 32px;
         font-family: sans-serif;
@@ -28,10 +29,8 @@
 
         .buttons-group {
             display: flex;
-            flex-direction: row;
-            margin-left: 240px;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            margin: auto;
+            padding-left: 225px;
 
             .filter-statistic {
                 margin-top: 10px;
