--- a/wf-stats-ui/src/pages/WeatherForecastPage.css
+++ b/wf-stats-ui/src/pages/WeatherForecastPage.css
@@ -1,12 +1,10 @@
 .weather-card {
-    margin-top: 30px;
-    margin-left: 600px;
+    margin: auto;
     width: 500px;
 
     .title {
         margin-top: 15px;
         margin-left: 25px;
-
 
         .card-close-button {
             margin-right: 10px;
