Refactor backend (create Criteria Builder queries).

--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -49,6 +49,7 @@
 
         .get-statistic-country {
             text-align: center;
+            margin-top: 25px;
 
             .search-statistic-button {
                 margin-top: 5px;
