Add forecast statistic and update UI (6th task). (#10)
* Update frontend

* Add model for showing current weather

* Add weather statistic page

* Update weather statistic page (diagram and filter fields)

* Update frontend display statistic.

* Draft repository layer.

* Minor changes.

* Minor changes.

* Update UI (modal, weather forecast and statistic section).

* Minor changes (CSS styles).

* Refactor backend (create Criteria Builder queries).

* Fix bug with updating filter button states.

* Fix bug with query and add tracking for buttons.

--- a/wf-stats-ui/src/App.css
+++ b/wf-stats-ui/src/App.css
@@ -1,26 +1,10 @@
 .App {
-    background-color: #f6f6f6;
-    height: 100%;
-    margin: 0;
-
-    .cell-header {
-        font-size: 20px;
-        font-family: -apple-system, serif;
-    }
-
-    .cell-data {
-        font-size: 18px;
-        font-family: -moz-fixed, serif;
-        color: #3a3939;
-    }
-
     .not-found {
-        text-align: center;
-    }
-
-    .statistic-page {
         margin-top: 25px;
         text-align: center;
-        padding-bottom: 540px;
+
+        .button-home {
+            margin-top: 25px;
+        }
     }
 }
