--- a/wf-stats-ui/src/pages/DashboardPage.css
+++ b/wf-stats-ui/src/pages/DashboardPage.css
@@ -1,26 +1,113 @@
-.header {
-    background: #00ccff;
+.App {
+
+    .change-location {
+        margin-top: 25px;
+        margin-bottom: 30px;
+        text-align: center;
+        font-size: 32px;
+        font-family: sans-serif;
+    }
+
+    .change-button {
+        margin-left: 15px;
+    }
+
+    .statistic-page {
+        margin-top: 40px;
+
+        .title-statistic {
+            text-align: center;
+            font-size: 32px;
+            font-family: sans-serif;
+        }
+
+        .statistic-diagram {
+            width: 1000px;
+            display: table;
+            margin: 30px auto;
+        }
+
+        .buttons-group {
+            display: flex;
+            margin: auto;
+            padding-left: 225px;
+
+            .filter-statistic {
+                margin-top: 10px;
+                margin-left: 150px;
+            }
+
+            .date-statistic {
+                margin-top: 10px;
+                margin-left: 100px;
+            }
+
+            .reset-filter {
+                margin-left: 30px;
+            }
+        }
+
+        .get-statistic-country {
+            text-align: center;
+            margin-top: 25px;
+
+            .search-statistic-button {
+                margin-top: 5px;
+                margin-left: 15px;
+            }
+        }
+    }
 }
 
-.main-title {
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-    text-align: center;
-    padding: 10px;
-}
+.box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    background-color: #f6f6f6;
+    padding: 4px;
+    border-radius: 5px;
 
-.inputs {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    .title-modal {
+        font-family: sans-serif, sans-serif;
+        margin-top: 15px;
+        text-align: center;
+        font-size: 34px;
 
-    .city {
-        margin-left: 20px;
+        .modal-close-button {
+            margin-right: 10px;
+            float: right;
+            min-width: 0;
+            width: 20px;
+            height: 20px;
+            line-height: 0;
+        }
+
+        .close-image {
+            height: 20px;
+        }
+    }
+
+    .inputs {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 30px;
+        margin-top: 30px;
+
+        .city {
+            margin-left: 20px;
+        }
+    }
+
+    .alert-message {
+        margin-top: 20px;
+        text-align: center;
     }
 
     .search-button {
-        margin-left: 10px;
+        text-align: right;
+        margin-bottom: 25px;
+        margin-right: 30px;
     }
 }
