--- a/wf-location-ui/src/pages/LocationPage.css
+++ b/wf-location-ui/src/pages/LocationPage.css
@@ -1,15 +1,19 @@
 .App {
 
     .change-location {
-        margin-top: 25px;
-        margin-bottom: 30px;
         text-align: center;
-        font-size: 32px;
-        font-family: sans-serif;
-    }
 
-    .change-button {
-        margin-left: 15px;
+        .title {
+            margin-top: 25px;
+            text-align: center;
+            font-size: 32px;
+            font-family: sans-serif;
+        }
+
+        .change-button {
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
     }
 }
 
